@@ -352,7 +352,10 @@ void add_me_cmd(char *buf, int len, socket_struct *ns) {
         SockList_AddString(&sl, "addme_failed");
         Send_With_Handling(ns, &sl);
         SockList_Term(&sl);
-    } else {
+    } else if (find_player_socket(ns) == NULL) {
+        /* if there is already a player for this socket (add_me was already called),
+         * just ignore, else weird issues. */
+
         add_player(ns);
         /* Basically, the add_player copies the socket structure into
          * the player structure, so this one (which is from init_sockets)
