@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix crash if 'add_me' was sent multiple times.
+ socket/request.c
+Nicolas Weeger 2010-04-07
+
 Commit account management code.  Seems mature enough for general use - probably
 a few bugs.  What this adds is an account that characters use to log in,
 at which point they then choose what character they want to play.
